# statistics101

./: pyproject.toml
vib_statistics/: Lesson1.ipynb  main.py  pyproject.toml
vib_statistics/data_distribution/: 7_tornado_noaa.ipynb
